@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+       - Allow multiple levels for result in namespace for get_namespace_parts
+         (aka, Foo::Schema::Result::Baz::Biff) (for melo)
        - Add Helper::Row::ToJSON
        - Autopopulate is_numeric correcly with NumifyGet
        - Fix mssql Random to use RAND() (pldoh, #RT53885)
